// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox UI component renders correctly when checked 1`] = `
.c0:not(.hasLabel) {
  -webkit-flex: 0 0 22px;
  -ms-flex: 0 0 22px;
  flex: 0 0 22px;
  width: 22px;
  height: 22px;
}

.c0.hasLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-flex: 0 0 22px;
  -ms-flex: 0 0 22px;
  flex: 0 0 22px;
  width: 22px;
  height: 22px;
  color: #fff;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border: solid 1px #aaa;
  border-radius: 3px;
  background: #fff;
  background: #04884C;
  border-color: #04884C;
  box-shadow: inset 0px 1px 1px rgba(0,0,0,0.15);
}

.c1:hover {
  border-color: #04884C;
}

.c2 {
  fill: #fff;
  height: 55%;
}

.c3 {
  color: #596B7A;
  font-size: 16px;
  padding: 5px 0 5px 10px;
  cursor: pointer;
}

<ThemeProvider
  theme={
    Object {
      "bannerWidth": 1340,
      "borderRadius": "3px",
      "colorMain": "#ef0071",
      "colorSecondary": "#f76901",
      "colorText": "#e68f51",
      "colors": Object {
        "adminBackground": "#F0F3F4",
        "adminBorder": "#EAEAEA",
        "adminContentBackground": "#fff",
        "adminDarkestBackground": "rgba(0, 0, 0, 0.75)",
        "adminLightText": "rgba(255, 255, 255, 0.8)",
        "adminMenuBackground": "#003349",
        "adminOrangeIcons": "#FF672F",
        "adminSecondaryTextColor": "#596B7A",
        "adminSeparation": "#EAEAEA",
        "adminTextColor": "#044D6C",
        "background": "#f4f4f5",
        "clBlue": "#008292",
        "clBlueDark": "#147985",
        "clBlueDarkBg": "#d3ecf0",
        "clBlueDarker": "#0A5159",
        "clBlueDarkest": "#02282D",
        "clBlueLight": "#40B8C5",
        "clBlueLighter": "#80CFD8",
        "clBlueLightest": "#BEE7EB",
        "clDropdownHoverBackground": "#e9e9e9",
        "clGreen": "#04884C",
        "clGreenSuccess": "#008040",
        "clGreenSuccessBackground": "#e4f7ef",
        "clGreyOnGreyBackground": "#707070",
        "clIconAccent": "#01A1B1",
        "clIconBackground": "rgba(1, 161, 177, 0.07)",
        "clIconPrimary": "#00577C",
        "clIconSecondary": "#84939E",
        "clRed": "#E52516",
        "clRed2": "#FC3C2D",
        "clRedError": "#D61607",
        "clRedErrorBackground": "#fde9e8",
        "disabledPrimaryButtonBg": "#d0d0d0",
        "draftYellow": "#8C680D",
        "emailBg": "#e6ebec",
        "emailText": "#004d6c",
        "facebook": "#3b5998",
        "facebookMessenger": "#0084ff",
        "label": "#596B7A",
        "lightGreyishBlue": "#EBEDEF",
        "mediumGrey": "#BDBDBD",
        "placeholder": "#aaa",
        "placeholderBg": "#CFD6DB",
        "popoverDarkBg": "#2D2D2D",
        "popoverDarkFg": "#CBCBCB",
        "secondaryText": "#84939E",
        "separation": "#e0e0e0",
        "text": "#333",
        "twitter": "#1ea4f2",
      },
      "fontFamily": "larsseit",
      "fontSizes": Object {
        "base": 16,
        "large": 18,
        "medium": 17,
        "small": 14,
        "xl": 21,
        "xs": 12,
        "xxl": 25,
        "xxxl": 30,
        "xxxxl": 34,
        "xxxxxl": 42,
      },
      "maxPageWidth": 952,
      "menuHeight": 78,
      "menuStyle": "light",
      "mobileMenuHeight": 72,
      "mobileTopBarHeight": 66,
      "pageWidth": 1150,
      "textWidth": 720,
    }
  }
>
  <Checkbox
    label="test"
    onChange={[MockFunction]}
    size="22px"
    value={true}
  >
    <Checkbox__Container
      className="undefined hasLabel"
      size="22px"
    >
      <StyledComponent
        className="undefined hasLabel"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Checkbox__Container-cbcutw-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "&:not(.hasLabel){flex:0 0 ",
                [Function],
                ";width:",
                [Function],
                ";height:",
                [Function],
                ";}&.hasLabel{display:flex;align-items:center;}",
              ],
            },
            "displayName": "Checkbox__Container",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Checkbox__Container-cbcutw-0",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        size="22px"
      >
        <div
          className="c0 undefined hasLabel"
          size="22px"
        >
          <Checkbox__CheckboxContainer
            aria-labelledby="checkbox-label"
            checked={true}
            className="e2e-checkbox checked"
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            role="button"
            size="22px"
            tabIndex={0}
          >
            <StyledComponent
              aria-labelledby="checkbox-label"
              checked={true}
              className="e2e-checkbox checked"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Checkbox__CheckboxContainer-cbcutw-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "flex:0 0 ",
                      [Function],
                      ";width:",
                      [Function],
                      ";height:",
                      [Function],
                      ";color:#fff;text-align:center;display:flex;align-items:center;justify-content:center;cursor:pointer;border:solid 1px #aaa;border-radius:",
                      [Function],
                      ";background:#fff;background:",
                      [Function],
                      ";border-color:",
                      [Function],
                      ";box-shadow:inset 0px 1px 1px rgba(0,0,0,0.15);&:hover{border-color:",
                      [Function],
                      ";}",
                    ],
                  },
                  "displayName": "Checkbox__CheckboxContainer",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Checkbox__CheckboxContainer-cbcutw-1",
                  "target": "div",
                  "toString": [Function],
                  "usesTheme": true,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              onMouseDown={[Function]}
              role="button"
              size="22px"
              tabIndex={0}
            >
              <div
                aria-labelledby="checkbox-label"
                checked={true}
                className="c1 e2e-checkbox checked"
                onClick={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                role="button"
                size="22px"
                tabIndex={0}
              >
                <Checkbox__CheckmarkIcon
                  name="checkmark"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "compare": null,
                        "componentStyle": ComponentStyle {
                          "componentId": "Checkbox__CheckmarkIcon-cbcutw-2",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "fill:#fff;height:55%;",
                          ],
                        },
                        "displayName": "Checkbox__CheckmarkIcon",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Checkbox__CheckmarkIcon-cbcutw-2",
                        "target": Object {
                          "$$typeof": Symbol(react.memo),
                          "compare": null,
                          "type": [Function],
                        },
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    name="checkmark"
                  >
                    <Memo()
                      className="c2"
                      name="checkmark"
                    >
                      <svg
                        className="c2"
                        height="100%"
                        viewBox="0 0 19 15"
                      >
                        <path
                          d="M6.05 11.467L1.533 6.95 0 8.482l6.05 6.05 13-13L17.517 0z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </Memo()>
                  </StyledComponent>
                </Checkbox__CheckmarkIcon>
              </div>
            </StyledComponent>
          </Checkbox__CheckboxContainer>
          <Checkbox__Label
            id="checkbox-label"
            onClick={[Function]}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Checkbox__Label-cbcutw-3",
                    "isStatic": false,
                    "lastClassName": "c3",
                    "rules": Array [
                      "color:",
                      "#596B7A",
                      ";font-size:",
                      "16",
                      "px;padding:5px 0 5px 10px;cursor:pointer;",
                    ],
                  },
                  "displayName": "Checkbox__Label",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Checkbox__Label-cbcutw-3",
                  "target": "label",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              id="checkbox-label"
              onClick={[Function]}
            >
              <label
                className="c3"
                id="checkbox-label"
                onClick={[Function]}
              >
                test
              </label>
            </StyledComponent>
          </Checkbox__Label>
        </div>
      </StyledComponent>
    </Checkbox__Container>
  </Checkbox>
</ThemeProvider>
`;

exports[`Checkbox UI component renders correctly when unchecked 1`] = `
.c0:not(.hasLabel) {
  -webkit-flex: 0 0 22px;
  -ms-flex: 0 0 22px;
  flex: 0 0 22px;
  width: 22px;
  height: 22px;
}

.c0.hasLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-flex: 0 0 22px;
  -ms-flex: 0 0 22px;
  flex: 0 0 22px;
  width: 22px;
  height: 22px;
  color: #fff;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border: solid 1px #aaa;
  border-radius: 3px;
  background: #fff;
  background: #fff;
  border-color: #aaa;
  box-shadow: inset 0px 1px 1px rgba(0,0,0,0.15);
}

.c1:hover {
  border-color: #333;
}

.c2 {
  color: #596B7A;
  font-size: 16px;
  padding: 5px 0 5px 10px;
  cursor: pointer;
}

<ThemeProvider
  theme={
    Object {
      "bannerWidth": 1340,
      "borderRadius": "3px",
      "colorMain": "#ef0071",
      "colorSecondary": "#f76901",
      "colorText": "#e68f51",
      "colors": Object {
        "adminBackground": "#F0F3F4",
        "adminBorder": "#EAEAEA",
        "adminContentBackground": "#fff",
        "adminDarkestBackground": "rgba(0, 0, 0, 0.75)",
        "adminLightText": "rgba(255, 255, 255, 0.8)",
        "adminMenuBackground": "#003349",
        "adminOrangeIcons": "#FF672F",
        "adminSecondaryTextColor": "#596B7A",
        "adminSeparation": "#EAEAEA",
        "adminTextColor": "#044D6C",
        "background": "#f4f4f5",
        "clBlue": "#008292",
        "clBlueDark": "#147985",
        "clBlueDarkBg": "#d3ecf0",
        "clBlueDarker": "#0A5159",
        "clBlueDarkest": "#02282D",
        "clBlueLight": "#40B8C5",
        "clBlueLighter": "#80CFD8",
        "clBlueLightest": "#BEE7EB",
        "clDropdownHoverBackground": "#e9e9e9",
        "clGreen": "#04884C",
        "clGreenSuccess": "#008040",
        "clGreenSuccessBackground": "#e4f7ef",
        "clGreyOnGreyBackground": "#707070",
        "clIconAccent": "#01A1B1",
        "clIconBackground": "rgba(1, 161, 177, 0.07)",
        "clIconPrimary": "#00577C",
        "clIconSecondary": "#84939E",
        "clRed": "#E52516",
        "clRed2": "#FC3C2D",
        "clRedError": "#D61607",
        "clRedErrorBackground": "#fde9e8",
        "disabledPrimaryButtonBg": "#d0d0d0",
        "draftYellow": "#8C680D",
        "emailBg": "#e6ebec",
        "emailText": "#004d6c",
        "facebook": "#3b5998",
        "facebookMessenger": "#0084ff",
        "label": "#596B7A",
        "lightGreyishBlue": "#EBEDEF",
        "mediumGrey": "#BDBDBD",
        "placeholder": "#aaa",
        "placeholderBg": "#CFD6DB",
        "popoverDarkBg": "#2D2D2D",
        "popoverDarkFg": "#CBCBCB",
        "secondaryText": "#84939E",
        "separation": "#e0e0e0",
        "text": "#333",
        "twitter": "#1ea4f2",
      },
      "fontFamily": "larsseit",
      "fontSizes": Object {
        "base": 16,
        "large": 18,
        "medium": 17,
        "small": 14,
        "xl": 21,
        "xs": 12,
        "xxl": 25,
        "xxxl": 30,
        "xxxxl": 34,
        "xxxxxl": 42,
      },
      "maxPageWidth": 952,
      "menuHeight": 78,
      "menuStyle": "light",
      "mobileMenuHeight": 72,
      "mobileTopBarHeight": 66,
      "pageWidth": 1150,
      "textWidth": 720,
    }
  }
>
  <Checkbox
    label="test"
    onChange={[MockFunction]}
    size="22px"
    value={false}
  >
    <Checkbox__Container
      className="undefined hasLabel"
      size="22px"
    >
      <StyledComponent
        className="undefined hasLabel"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Checkbox__Container-cbcutw-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "&:not(.hasLabel){flex:0 0 ",
                [Function],
                ";width:",
                [Function],
                ";height:",
                [Function],
                ";}&.hasLabel{display:flex;align-items:center;}",
              ],
            },
            "displayName": "Checkbox__Container",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Checkbox__Container-cbcutw-0",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        size="22px"
      >
        <div
          className="c0 undefined hasLabel"
          size="22px"
        >
          <Checkbox__CheckboxContainer
            aria-labelledby="checkbox-label"
            checked={false}
            className="e2e-checkbox unchecked"
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            role="button"
            size="22px"
            tabIndex={0}
          >
            <StyledComponent
              aria-labelledby="checkbox-label"
              checked={false}
              className="e2e-checkbox unchecked"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Checkbox__CheckboxContainer-cbcutw-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "flex:0 0 ",
                      [Function],
                      ";width:",
                      [Function],
                      ";height:",
                      [Function],
                      ";color:#fff;text-align:center;display:flex;align-items:center;justify-content:center;cursor:pointer;border:solid 1px #aaa;border-radius:",
                      [Function],
                      ";background:#fff;background:",
                      [Function],
                      ";border-color:",
                      [Function],
                      ";box-shadow:inset 0px 1px 1px rgba(0,0,0,0.15);&:hover{border-color:",
                      [Function],
                      ";}",
                    ],
                  },
                  "displayName": "Checkbox__CheckboxContainer",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Checkbox__CheckboxContainer-cbcutw-1",
                  "target": "div",
                  "toString": [Function],
                  "usesTheme": true,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              onMouseDown={[Function]}
              role="button"
              size="22px"
              tabIndex={0}
            >
              <div
                aria-labelledby="checkbox-label"
                checked={false}
                className="c1 e2e-checkbox unchecked"
                onClick={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                role="button"
                size="22px"
                tabIndex={0}
              />
            </StyledComponent>
          </Checkbox__CheckboxContainer>
          <Checkbox__Label
            id="checkbox-label"
            onClick={[Function]}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Checkbox__Label-cbcutw-3",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "color:",
                      "#596B7A",
                      ";font-size:",
                      "16",
                      "px;padding:5px 0 5px 10px;cursor:pointer;",
                    ],
                  },
                  "displayName": "Checkbox__Label",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Checkbox__Label-cbcutw-3",
                  "target": "label",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              id="checkbox-label"
              onClick={[Function]}
            >
              <label
                className="c2"
                id="checkbox-label"
                onClick={[Function]}
              >
                test
              </label>
            </StyledComponent>
          </Checkbox__Label>
        </div>
      </StyledComponent>
    </Checkbox__Container>
  </Checkbox>
</ThemeProvider>
`;
